Sección de Estado del arte y completitud del capítulo "marco teórico" añadidos

--- a/references.bib
+++ b/references.bib
@@ -875,6 +875,362 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.485.5490R},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{Wu2025,
+doi = {10.3847/1538-3881/ad9388},
+url = {https://dx.doi.org/10.3847/1538-3881/ad9388},
+year = {2024},
+month = {12},
+publisher = {The American Astronomical Society},
+volume = {169},
+number = {1},
+pages = {28},
+author = {Wu, Dong-Hong and Jin, Sheng and Steffen, Jason H.},
+title = {Enhanced Stability in Planetary Systems with Similar Masses},
+journal = {The Astronomical Journal},
+abstract = {This study employs numerical simulations to explore the relationship between the dynamical instability of planetary systems and the uniformity of planetary masses within the system, quantified by the Gini index. Our findings reveal a significant correlation between system stability and mass uniformity. Specifically, planetary systems with higher mass uniformity demonstrate increased stability, particularly when they are distant from first-order mean motion resonances. In general, for nonresonant planetary systems with a constant total mass, non-equal-mass systems are less stable than equal mass systems for a given spacing in units of mutual Hill radius. This instability may arise from the equipartition of the total random energy, which can lead to higher eccentricities in smaller planets, ultimately destabilizing the system. This work suggests that the observed mass uniformity within multiplanet systems detected by Kepler may result from a combination of survival bias and ongoing dynamical evolution processes.}
+}
+
+@article{10.1093/mnras/stz752,
+    author = {Singh, Mridweeka and Misra, Kuntal and Sahu, D K and Dastidar, Raya and Gangopadhyay, Anjasha and Srivastav, Shubham and Anupama, G C and Bose, Subhash and Lipunov, Vladimir and Chakradhari, N K and Kumar, Brajesh and Kumar, Brijesh and Pandey, S B and Gorbovskoy, Evgeny and Balanutsa, Pavel},
+    title = {Observational properties of a Type Ib supernova MASTER OT J120451.50+265946.6 in NGC 4080},
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {485},
+    number = {4},
+    pages = {5438-5452},
+    year = {2019},
+    month = {03},
+    abstract = {MASTER OT J120451.50+265946.6 (M12045), discovered by the MASTER Global Robotic Net, is a Type Ib supernova (SN) that exploded in NGC 4080. We present the BVRI photometric and spectroscopic observations up to ∼250 d since Bmax. At the time of discovery the SN was a few weeks past maximum light and our observations capture the linearly declining light-curve phase. M12045 declines faster as compared to SNe 1999dn and 2009jf at comparable epochs. Rigorous spectroscopic monitoring reveals that M12045 is a normal Type Ib SN. The analysis of the nebular phase spectra indicates that ∼0.90 M⊙ of O is ejected in the explosion. The line ratio of [O i] and [Ca ii] in the nebular phase supports a massive WR progenitor with main-sequence mass of ∼20 M⊙.},
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stz752},
+    url = {https://doi.org/10.1093/mnras/stz752},
+    eprint = {https://academic.oup.com/mnras/article-pdf/485/4/5438/28262277/stz752.pdf},
+}
+
+@article{dubinski1996,
+title = {A parallel tree code},
+journal = {New Astronomy},
+volume = {1},
+number = {2},
+pages = {133-147},
+year = {1996},
+issn = {1384-1076},
+doi = {https://doi.org/10.1016/S1384-1076(96)00009-7},
+url = {https://www.sciencedirect.com/science/article/pii/S1384107696000097},
+author = {John Dubinski},
+keywords = {Methods: numerical, Galaxies: formation, Galaxies: kinematics and dynamics, Cosmology: theory},
+}
+
+@article{barnes1990,
+title = {A modified tree code: Don't laugh; It runs},
+journal = {Journal of Computational Physics},
+volume = {87},
+number = {1},
+pages = {161-170},
+year = {1990},
+issn = {0021-9991},
+doi = {https://doi.org/10.1016/0021-9991(90)90232-P},
+url = {https://www.sciencedirect.com/science/article/pii/002199919090232P},
+author = {Joshua E. Barnes},
+abstract = {I describe a modification of the Barnes-Hut tree algorithm together with a series of numerical tests of this method. The basic idea is to improve the performance of the code on heavily vector-oriented machines such as the Cyber 205 by exploiting the fact that nearby particles tend to have very similar interaction lists. By building an interaction list good everywhere within a cell containing a modest number of particles and reusing this interaction list for each particle in the cell in turn, the balance of computation can be shifted from recursive descent to force summation. Instead of vectorizing tree descent, this scheme simply avoids it in favor of force summation, which is quite easy to vectorize. A welcome side-effect of this modification is that the force calculation, which now treats a larger fraction of the local interactions exactly, is significantly more accurate than the unmodified method.}
+}
+
+@book{pfalzner1996,
+place={Cambridge},
+title={Many-Body Tree Methods in Physics},
+publisher={Cambridge University Press},
+author={Pfalzner, Susanne and Gibbon, Paul},
+year={1996},
+doi = {https://doi.org/10.1017/CBO9780511529368},
+isbn = {9780511529368},
+url = {https://www.cambridge.org/core/books/manybody-tree-methods-in-physics/74A783F229C08A4BE8D2982FA0F58960}
+}
+
+@phdthesis{salmon1991,
+  author       = {John K. Salmon},
+  title        = {Parallel Hierarchical N-body Methods},
+  school       = {California Institute of Technology},
+  year         = {1991},
+  type         = {Dissertation (Ph.D.)},
+  doi          = {10.7907/3J5V-VR08},
+  url          = {https://resolver.caltech.edu/CaltechTHESIS:04112011-113813016},
+  address      = {Pasadena, CA},
+  keywords     = {Physics},
+  note         = {Advisors: Geoffrey C. Fox, Thomas A. Prince. Division: Physics, Mathematics and Astronomy. Publicly available.},
+}
+
+@bachelorsthesis{aguirre2020,
+  author    = {Maia Aguirre Pascual de Zulueta},
+  title     = {Estudio e implementación del algoritmo Barnes-Hut para el cálculo de la interacción gravitatoria entre N-cuerpos},
+  school    = {Universidad del País Vasco},
+  year      = {2020},
+  month     = {12},
+  url       = {https://addi.ehu.es/handle/10810/49069},
+  abstract  = {En este trabajo, se proporciona una implementación original del algoritmo Barnes-Hut en Python 3.7, tanto en 2D como en 3D. Este algoritmo resuelve aproximadamente el problema de N-cuerpos y es conocido por lograr orden al agrupar cuerpos cercanos en un solo individuo cuando son observados desde una distancia suficientemente lejana. Además, se concibió un esquema original para agrupar esos cuerpos; esta prueba de concepto resultó funcionar con precisión. Asimismo, se analizó el rango de validez del prototipo y se contrastó con el algoritmo de suma directa mediante un conjunto seleccionado de ejemplos. La implementación del algoritmo BH depende en gran medida de una estructura de datos de tipo árbol profundamente anidada. Como tal, su manipulación es fundamentalmente recursiva y altamente compleja. Esta es la razón por la que se incluyó una explicación extendida, con dibujos y esquemas, de la estrategia de contabilidad involucrada en su uso. Finalmente, se subió el código completo a la plataforma GitHub y, por lo tanto, se puso a disposición del público.},
+}
+
+@article{munier2020,
+  author    = {Badri Munier and Muhammad Aleem and Majid Khan and Muhammad Arshad Islam and Muhammad Azhar Iqbal and Muhammad Kamran Khattak},
+  title     = {On the parallelization and performance analysis of Barnes–Hut algorithm using Java parallel platforms},
+  journal   = {SN Applied Sciences},
+  volume    = {2},
+  number    = {4},
+  pages     = {601},
+  year      = {2020},
+  month     = {3},
+  doi       = {10.1007/s42452-020-2386-z},
+  url       = {https://doi.org/10.1007/s42452-020-2386-z},
+  issn      = {2523-3971},
+  abstract  = {Multi-core processors provide time-efficient and cost-effective solutions to execute the algorithms for complex physical systems. However, to efficiently exploit the processing capabilities of the underlying architectures, the applications executing on multi-core processors must be parallelized. Conventionally, the applications for high-performance computing (HPC) are written in native (programming) languages. However, several researchers have argued that Java can be an excellent alternative for writing HPC applications. To gauge the comparative performance of Java parallel platforms, a benchmark study is required considering some real HPC applications. In this study, as a pioneer application, Java-based parallel platforms, namely Java thread API, JavaSymphony, and MPJ Express, are used to parallelize and benchmark the Barnes–Hut algorithm to simulate the N-body physical system of celestial objects. The parallel implementations of the Barnes–Hut algorithm are tested for performance on shared memory multi-core architectures. The hardware-level performance analysis involving the parameters like the number of instructions executed by the CPU, level-1 and level-3 cache misses, and the number of main memory accesses is conducted to investigate the insights of the attained performances. The celestial objects up to one million are simulated, and the results revealed that the JavaSymphony-based implementation of the Barnes–Hut algorithm produces better results as compared to the other employed parallel frameworks.}
+}
+
+@article{becciani1997,
+title = {A parallel tree code for large N-body simulation: dynamic load balance and data distribution on a CRAY T3D system},
+journal = {Computer Physics Communications},
+volume = {106},
+number = {1},
+pages = {105-113},
+year = {1997},
+issn = {0010-4655},
+doi = {https://doi.org/10.1016/S0010-4655(97)00102-1},
+url = {https://www.sciencedirect.com/science/article/pii/S0010465597001021},
+author = {U Becciani and R Ansaloni and V Antonuccio-Delogu and G Erbacci and M Gambera and A Pagliaro},
+abstract = {N-body algorithms for long-range unscreened interactions like gravity belong to a class of highly irregular problems whose optimal solution is a challenging task for present-day massively parallel computers. In this paper we describe a strategy for optimal memory and work distribution which we have applied to our parallel implementation of the Barnes & Hut (1986) recursive tree scheme on a Cray T3D using the CRAFT programming environment. We have performed a series of tests to find an optimal data distribution in the T3D memory, and to identify a strategy for the Dynamic Load Balance in order to obtain good performances when running large simulations (more than 10 million particles). The results of tests show that the step duration depends on two main factors: the data locality and the T3D network contention. Increasing data locality we are able to minimize the step duration if the closest bodies (direct interaction) tend to be located in the same PE local memory (contiguous block subdivision, high granularity), whereas the tree properties have a fine grain distributuion. In a very large simulation, due to network contention, an unbalanced load arises. To remedy this we have devised an automatic work redistribution mechanism which provided a good Dynamic Load Balance at the price of an insignificant overhead.}
+}
+@article{becciani2000,
+title = {A Modified Parallel Tree Code for N-Body Simulation of the Large-Scale Structure of the Universe},
+journal = {Journal of Computational Physics},
+volume = {163},
+number = {1},
+pages = {118-132},
+year = {2000},
+issn = {0021-9991},
+doi = {https://doi.org/10.1006/jcph.2000.6557},
+url = {https://www.sciencedirect.com/science/article/pii/S0021999100965574},
+author = {U. Becciani and V. Antonuccio-Delogu and M. Gambera},
+abstract = {N-body codes for performing simulations of the origin and evolution of the large-scale structure of the universe have improved significantly over the past decade in terms of both the resolution achieved and the reduction of the CPU time. However, state-of-the-art N-body codes hardly allow one to deal with particle numbers larger than a few 107, even on the largest parallel systems. In order to allow simulations with larger resolution, we have first reconsidered the grouping strategy as described in J. Barnes (1990, J. Comput. Phys.87, 161) (hereafter B90) and applied it with some modifications to our WDSH–PT (Work and Data SHaring–Parallel Tree) code (U. Becciani et al., 1996, Comput. Phys. Comm.99, 1). In the first part of this paper we will give a short description of the code adopting the algorithm of J. E. Barnes and P. Hut (1986, Nature324, 446) and in particular the memory and work distribution strategy applied to describe the data distribution on a CC–NUMA machine like the CRAY–T3E system. In very large simulations (typically N≥107), due to network contention and the formation of clusters of galaxies, an uneven load easily verifies. To remedy this, we have devised an automatic work redistribution mechanism which provided a good dynamic load balance without adding significant overhead. In the second part of the paper we describe the modification to the Barnes grouping strategy we have devised to improve the performance of the WDSH–PT code. We will use the property that nearby particles have similar interaction lists. This idea has been checked in B90, where an interaction list is built which applies everywhere within a cell Cgroup containing a small number of particles Ncrit. B90 reuses this interaction list for each particle p∈Cgroup in the cell in turn. We will assume each particle p to have the same interaction list. We consider that the agent force Fp on a particle p can be decomposed into two terms Fp=Ffar+Fnear. The first term Ffar is the same for each particle in the cell and is generated by the interaction between a hypothetical particle placed in the center of mass of the Cgroup and the farther cells contained in the interaction list. Fnear is different for each particle p and is generated by the interaction between p and the elements near Cgroup. Thus it has been possible to reduce the CPU time and increase the code performance. This enables us to run simulations with a large number of particles (N∼107–109) in nonprohibitive CPU times.}
+}
+
+@incollection{burtscher2011,
+title = {Chapter 6 - An Efficient CUDA Implementation of the Tree-Based Barnes Hut n-Body Algorithm},
+editor = {Wen-mei W. Hwu},
+booktitle = {GPU Computing Gems Emerald Edition},
+publisher = {Morgan Kaufmann},
+address = {Boston},
+pages = {75-92},
+year = {2011},
+series = {Applications of GPU Computing Series},
+isbn = {978-0-12-384988-5},
+doi = {https://doi.org/10.1016/B978-0-12-384988-5.00006-1},
+url = {https://www.sciencedirect.com/science/article/pii/B9780123849885000061},
+author = {Martin Burtscher and Keshav Pingali},
+abstract = {Publisher Summary
+This chapter describes the first CUDA implementation of the classical Barnes Hut n-body algorithm that runs entirely on the GPU. The Barnes Hut force-calculation algorithm is widely used in n-body simulations such as modeling the motion of galaxies. It hierarchically decomposes the space around the bodies into successively smaller boxes, called cells, and computes summary information for the bodies contained in each cell, allowing the algorithm to quickly approximate the forces (e.g., gravitational, electric, or magnetic) that the n bodies induce upon each other. The Barnes Hut algorithm is challenging to implement efficiently in CUDA because it repeatedly builds and traverses an irregular tree-based data structure, it performs a lot of pointer-chasing memory operations, and it is typically expressed recursively. GPU-specific operations such as thread-voting functions are exploited to greatly improve performance and make use of fence instructions to implement lightweight synchronization without atomic operations. The main conclusion of the work is that GPUs can be used to accelerate irregular codes, not just regular codes. However, a great deal of programming effort is required to achieve good performance. The biggest performance win, though, came from turning some of the unique architectural features of GPUs, which are often regarded as performance hurdles for irregular codes, into assets. Future direction indicates workings on writing high-performing CUDA implementations for other irregular algorithms.}
+}
+
+@article{hamada2009,
+  author    = {Tsuyoshi Hamada and Keigo Nitadori and Khaled Benkrid and Yousuke Ohno and Gentaro Morimoto and Tomonari Masada and Yuichiro Shibata and Kiyoshi Oguri and Makoto Taiji},
+  title     = {A novel multiple-walk parallel algorithm for the Barnes–Hut treecode on GPUs – towards cost effective, high performance N-body simulation},
+  journal   = {Computer Science - Research and Development},
+  volume    = {24},
+  number    = {1},
+  pages     = {21--31},
+  year      = {2009},
+  month     = {09},
+  doi       = {10.1007/s00450-009-0089-1},
+  url       = {https://doi.org/10.1007/s00450-009-0089-1},
+  issn      = {1865-2042},
+  abstract  = {Recently, general-purpose computation on graphics processing units (GPGPU) has become an increasingly popular field of study as graphics processing units (GPUs) continue to be proposed as high performance and relatively low cost implementation platforms for scientific computing applications. Among these applications figure astrophysical N-body simulations, which form one of the most challenging problems in computational science. However, in most reported studies, a simple O(N²) algorithm was used for GPGPUs, and the resulting performances were not observed to be better than those of conventional CPUs that were based on more optimized O(N log N) algorithms such as the tree algorithm or the particle-particle particle-mesh algorithm. Because of the difficulty in getting efficient implementations of such algorithms on GPUs, a GPU cluster had no practical advantage over general-purpose PC clusters for N-body simulations. In this paper, we report a new method for efficient parallel implementation of the tree algorithm on GPUs. Our novel tree code allows the realization of an N-body simulation on a GPU cluster at a much higher performance than that on general PC clusters. We practically performed a cosmological simulation with 562 million particles on a GPU cluster using 128 NVIDIA GeForce 8800GTS GPUs at an overall cost of 168172 USD. We obtained a sustained performance of 20.1 Tflops, which when normalized against a general-purpose CPU implementation leads to a performance of 8.50 Tflops. The achieved cost/performance was hence a mere 19.8 USD/Gflops which shows}
+}
+
+@article{salmon1994,
+title = {Skeletons from the Treecode Closet},
+journal = {Journal of Computational Physics},
+volume = {111},
+number = {1},
+pages = {136-155},
+year = {1994},
+issn = {0021-9991},
+doi = {https://doi.org/10.1006/jcph.1994.1050},
+url = {https://www.sciencedirect.com/science/article/pii/S0021999184710503},
+author = {John K. Salmon and Michael S. Warren}
+}
+
+@misc{bagla2004,
+      title={Cosmological N-Body simulation: Techniques, Scope and Status},
+      author={J. S. Bagla},
+      year={2004},
+      eprint={astro-ph/0411043},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph},
+      url={https://arxiv.org/abs/astro-ph/0411043}
+}
+
+@article{vandemaaten2008,
+  author  = {Laurens van der Maaten and Geoffrey Hinton},
+  title   = {Visualizing Data using t-SNE},
+  journal = {Journal of Machine Learning Research},
+  year    = {2008},
+  volume  = {9},
+  number  = {86},
+  pages   = {2579--2605},
+  url     = {http://jmlr.org/papers/v9/vandermaaten08a.html}
+}
+
+@misc{vandermaaten2013,
+      title={Barnes-Hut-SNE},
+      author={Laurens van der Maaten},
+      year={2013},
+      eprint={1301.3342},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1301.3342}
+}
+
+@article{Gan2014,
+  author    = {ZeCheng Gan and ZhenLi Xu},
+  title     = {Efficient implementation of the Barnes-Hut octree algorithm for Monte Carlo simulations of charged systems},
+  journal   = {Science China Mathematics},
+  volume    = {57},
+  number    = {7},
+  pages     = {1331--1340},
+  year      = {2014},
+  month     = {7},
+  doi       = {10.1007/s11425-014-4783-5},
+  url       = {https://doi.org/10.1007/s11425-014-4783-5},
+  issn      = {1869-1862},
+  abstract  = {Computer simulation with Monte Carlo is an important tool to investigate the function and equilibrium properties of many biological and soft matter materials solvable in solvents. The appropriate treatment of long-range electrostatic interaction is essential for these charged systems, but remains a challenging problem for large-scale simulations. We have developed an efficient Barnes-Hut treecode algorithm for electrostatic evaluation in Monte Carlo simulations of Coulomb many-body systems. The algorithm is based on a divide-and-conquer strategy and fast update of the octree data structure in each trial move through a local adjustment procedure. We test the accuracy of the tree algorithm, and use it to perform computer simulations of electric double layer near a spherical interface. It has been shown that the computational cost of the Monte Carlo method with treecode acceleration scales as log N in each move. For a typical system with ten thousand particles, by using the new algorithm, the speed has been improved by two orders of magnitude from the direct summation.}
+}
+
+@article{winkel2012,
+title = {A massively parallel, multi-disciplinary Barnes–Hut tree code for extreme-scale N-body simulations},
+journal = {Computer Physics Communications},
+volume = {183},
+number = {4},
+pages = {880-889},
+year = {2012},
+issn = {0010-4655},
+doi = {https://doi.org/10.1016/j.cpc.2011.12.013},
+url = {https://www.sciencedirect.com/science/article/pii/S0010465511004012},
+author = {Mathias Winkel and Robert Speck and Helge Hübner and Lukas Arnold and Rolf Krause and Paul Gibbon},
+keywords = {Parallel Barnes–Hut tree code, Blue Gene/P, Hybrid, Load balancing, Vortex methods, Pthreads},
+abstract = {The efficient parallelization of fast multipole-based algorithms for the N-body problem is one of the most challenging topics in high performance scientific computing. The emergence of non-local, irregular communication patterns generated by these algorithms can easily create an insurmountable bottleneck on supercomputers with hundreds of thousands of cores. To overcome this obstacle we have developed an innovative parallelization strategy for Barnes–Hut tree codes on present and upcoming HPC multicore architectures. This scheme, based on a combined MPI–Pthreads approach, permits an efficient overlap of computation and data exchange. We highlight the capabilities of this method on the full IBM Blue Gene/P system JUGENE at Jülich Supercomputing Centre and demonstrate scaling across 294,912 cores with up to 2,048,000,000 particles. Applying our implementation pepc to laser–plasma interaction and vortex particle methods close to the continuum limit, we demonstrate its potential for ground-breaking advances in large-scale particle simulations.}
+}
+
+@book{Nguyen2007,
+  editor    = {Hubert Nguyen},
+  title     = {GPU Gems 3},
+  publisher = {Addison-Wesley Professional},
+  year      = {2007},
+  isbn      = {978-0321515261},
+  url       = {https://developer.nvidia.com/gpugems/gpugems3/contributors},
+}
+
+@article{ReinTamayo2015,
+    author = {Rein, Hanno and Tamayo, Daniel},
+    title = {whfast: a fast and unbiased implementation of a symplectic Wisdom–Holman integrator for long-term gravitational simulations},
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {452},
+    number = {1},
+    pages = {376-388},
+    year = {2015},
+    month = {07},
+    abstract = {We present whfast, a fast and accurate implementation of a Wisdom–Holman symplectic integrator for long-term orbit integrations of planetary systems. whfast is significantly faster and conserves energy better than all other Wisdom–Holman integrators tested. We achieve this by significantly improving the Kepler solver and ensuring numerical stability of coordinate transformations to and from Jacobi coordinates. These refinements allow us to remove the linear secular trend in the energy error that is present in other implementations. For small enough timesteps, we achieve Brouwer's law, i.e. the energy error is dominated by an unbiased random walk due to floating-point round-off errors. We implement symplectic correctors up to order 11 that significantly reduce the energy error. We also implement a symplectic tangent map for the variational equations. This allows us to efficiently calculate two widely used chaos indicators the Lyapunov characteristic number and the Mean Exponential Growth factor of Nearby Orbits. whfast is freely available as a flexible C package, as a shared library, and as an easy-to-use python module.},
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stv1257},
+    url = {https://doi.org/10.1093/mnras/stv1257},
+    eprint = {https://academic.oup.com/mnras/article-pdf/452/1/376/4912268/stv1257.pdf},
+}
+
+@book{Hairer2006,
+  author    = {Ernst Hairer and Christian Lubich and Gerhard Wanner},
+  title     = {Geometric Numerical Integration: Structure-Preserving Algorithms for Ordinary Differential Equations},
+  series    = {Springer Series in Computational Mathematics},
+  edition   = {2},
+  publisher = {Springer Berlin, Heidelberg},
+  year      = {2006},
+  isbn      = {978-3-540-30666-5},
+  doi       = {10.1007/3-540-30666-8},
+  url       = {https://link.springer.com/book/10.1007/3-540-30666-8},
+}
+
+@article{Kinoshita1990,
+  author    = {Hiroshi Kinoshita and Haruo Yoshida and Hiroshi Nakai},
+  title     = {Symplectic integrators and their application to dynamical astronomy},
+  journal   = {Celestial Mechanics and Dynamical Astronomy},
+  volume    = {50},
+  number    = {1},
+  pages     = {59--71},
+  year      = {1990},
+  doi       = {10.1007/BF00048986},
+  url       = {https://doi.org/10.1007/BF00048986},
+  issn      = {1572-9478}
+}
+
+@article{Wisdom1980,
+  author    = {J. Wisdom},
+  title     = {The resonance overlap criterion and the onset of stochastic behavior in the restricted three-body problem},
+  journal   = {The Astronomical Journal},
+  volume    = {85},
+  number    = {8},
+  pages     = {1122--1133},
+  year      = {1980},
+  doi       = {10.1086/112778},
+  url       = {https://ui.adsabs.harvard.edu/abs/1980AJ.....85.1122W},
+  publisher = {IOP},
+  issn      = {0004-6256},
+  keywords  = {Celestial Mechanics, Dynamic Stability, Resonance, Stochastic Processes, Three Body Problem, Entropy, Hamiltonian Functions, Kolmogoroff Theory, Mass Ratios, Nonlinear Equations, Scaling Laws, Astronomy}
+}
+
+@ARTICLE{Wisdom1996,
+       author = {{Wisdom}, J. and {Holman}, M. and {Touma}, J.},
+        title = "{Symplectic Correctors}",
+      journal = {Fields Institute Communications},
+     keywords = {HAMILTONIAN, SYMPLECTIC, INTEGRATOR},
+         year = 1996,
+        month = jan,
+       volume = {10},
+        pages = {217},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996FIC....10..217W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Javaheri2023,
+   title={WHFast512: A symplectic N-body integrator for planetary systems optimized with AVX512 instructions},
+   volume={6},
+   ISSN={2565-6120},
+   url={http://dx.doi.org/10.21105/astro.2307.05683},
+   DOI={10.21105/astro.2307.05683},
+   journal={The Open Journal of Astrophysics},
+   publisher={Maynooth University},
+   author={Javaheri, Pejvak and Rein, Hanno and Tamayo, Dan},
+   year={2023},
+   month=jul }
+
+@misc{ReboundWHFastTut,
+  author       = {{REBOUND documentation}},
+  title        = {{WHFast tutorial}},
+  howpublished = {\url{https://rebound.readthedocs.io/en/latest/ipython_examples/WHFast/}},
+  note         = {Accessed: Abril 04, 2025},
+  year         = {2025}
+}
+
+@misc{ReboundIntegratorsDoc,
+  author       = {{REBOUND documentation}},
+  title        = {{Integrators - WHFast}},
+  howpublished = {\url{https://rebound.readthedocs.io/en/latest/integrators/}},
+  note         = {Accessed: Abril 04, 2025},
+  year         = {2025}
+}
+
+@misc{ReboundWHFastAdvanced,
+  author       = {{REBOUND documentation}},
+  title        = {{Advanced settings for WHFast: Extra speed, accuracy, and additional forces}},
+  howpublished = {\url{https://rebound.readthedocs.io/en/latest/ipython_examples/AdvWHFast/}},
+  note         = {Accessed: Abril 04, 2025},
+  year         = {2025}
+}
+
 %========================Propios de la plantilla ==========================
 
 @inproceedings{adam2015higgs,
