Añadido dos capitulos nevos y README

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{bm}      % For bold math symbols (\bm command)
 \usepackage{array}   % For better table column specifications
 \usepackage{booktabs} % For professional looking tables (\toprule, \midrule, \bottomrule)
+
 \setlength{\parindent}{0pt}
 % Añade esta línea antes de \begin{document}
 \let\cleardoublepage\clearpage
@@ -74,6 +75,8 @@
     \include{chapters/01-Introduccion}
     \include{chapters/02-EstadoDelArte}
     \include{chapters/03-MarcoTeorico}
+    \include{chapters/04-Planeacion}
+    \include{chapters/05-Analisis}
 
     \appendix
         %\include{Appendices/appendixA}
