Añadido el diagrama de actividades

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,11 @@
 \usepackage{changepage} % en el preámbulo
 \usepackage{bm}      % For bold math symbols (\bm command)
 \usepackage{array}   % For better table column specifications
-\usepackage{booktabs} % For professional looking tables (\toprule, \midrule, \bottomrule)
+\usepackage{booktabs}% For professional looking tables (\toprule, \midrule, \bottomrule)
+\usepackage{adjustbox}
+
+% Tikz packages
+\usetikzlibrary{shapes, arrows, positioning, calc}
 
 \setlength{\parindent}{0pt}
 % Añade esta línea antes de \begin{document}
