--- a/ipnstyle.sty
+++ b/ipnstyle.sty
@@ -10,7 +10,7 @@
 \RequirePackage{amsthm}
 \RequirePackage{amssymb}
 \RequirePackage{cancel}
-\RequirePackage[spanish]{babel}
+\RequirePackage[spanish, es-noshorthands]{babel}
 \RequirePackage{csquotes}
 \RequirePackage[backend=biber,style=numeric-comp,sorting=none]{biblatex}
 \RequirePackage{booktabs}
