--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{array}   % For better table column specifications
 \usepackage{booktabs}% For professional looking tables (\toprule, \midrule, \bottomrule)
 \usepackage{adjustbox}
+\usepackage{enumitem}
 
 % Tikz packages
 \usetikzlibrary{shapes, arrows, positioning, calc}
